--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1><a href="index.html"></a>LOGO</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="active-link"><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -65,7 +65,7 @@
     </section>
     
     <footer>
-        <img src="zocom-logo.svg">
+        <img src="#" class="logo-bottom">
         <p> &#169; Copyright Malmö team 2</p> 
         
     </footer>   
