Fanns två main  i contakt.html så jag sammanfogade dem

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,8 @@
                 <figure>
                     <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
                 </figure>
-                <h2 class="section.h2"></h2>
+                <h2 class="section.h2">Varför är våra produkter för er?</h2> 
+                <!-- Tillade h2 rubrik -->
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi fugit eos aperiam tempora nobis fugiat, repudiandae suscipit similique quasi perspiciatis accusantium minus facere velit.</p>
             </article>
         </section>
@@ -43,7 +44,8 @@
                 <figure>
                     <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
                 </figure>
-                <h2 class="section.h2"></h2>
+                <h2 class="section.h2">Vilka är vi?</h2>
+                <!-- Tillade h2 rubrik -->
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi fugit eos aperiam tempora nobis fugiat, repudiandae suscipit similique quasi perspiciatis accusantium minus facere velit.</p>
             </article>
         </section>
