Fixade lite sections till main där de behövdes, Korrigerade asiden, så den har ul li nu.

--- a/computers.html
+++ b/computers.html
@@ -24,12 +24,16 @@
     </header>
 
     <aside>
-        <a href="computers.html">Computers</a>
-        <a href="mobile.html">Mobile</a>
-        <a href="tablets.html">Tablets</a>
+        <!-- Lade till en ul med list items -->
+        <ul>
+            <li><a href="computers.html">Computers</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="tablets.html">Tablets</a></li>
+        </ul>
     </aside>
     
-    <section class="best-sellers">
+    <main class="best-sellers">
+        <!-- Ändrade från section -->
         <article>
             <!-- behöver vi inte ha "figure" på varje img? -->
             <img src="pictures/lenovo-laptop.jpg" alt="" aria-label="">
@@ -85,7 +89,7 @@
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
-    </section>
+    </main>
     
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom">
