--- a/tablets.html
+++ b/tablets.html
@@ -24,10 +24,14 @@
     </header>
 
     <aside>
-        <a href="computers.html">Computers</a>
-        <a href="mobile.html">Mobile</a>
-        <a href="tablets.html">Tablets</a>
+        <!-- Lade till en ul med list items -->
+        <ul>
+            <li><a href="computers.html">Computers</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+            <li><a href="tablets.html">Tablets</a></li>
+        </ul>
     </aside>
+
     
     <section class="best-sellers">
         <article>
