Ändrade bild på index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </article>
         
         <article>
-            <img src="pictures/ancient.retro.jpeg" alt="" aria-label="">
+            <img src="pictures/ancient-retro.png" alt="" aria-label="">
             <h3>Computer</h3>
             <p>Lorem ipsum dolor sit amet.</p>  
         </article>
