--- a/computers.html
+++ b/computers.html
@@ -43,7 +43,7 @@
         </article>
         
         <article>
-            <img src="pictures/ancient.retro.jpeg" alt="" aria-label="">
+            <img src="pictures/ancient-retro.jpeg" alt="" aria-label="">
             <h3>Ancient Retro</h3>
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Längtar du efter en simplare tid?</p>
@@ -63,7 +63,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
         <article>
-            <img src="pictures/ancient.retro.jpeg" alt="" aria-label="">
+            <img src="pictures/ancient-retro.jpeg" alt="" aria-label="">
             <h3>Ancient Retro 2</h3>
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Lorem ipsum dolor sit amet.</p>
@@ -84,7 +84,7 @@
         </article>
     
         <article>
-            <img src="pictures/ancient.retro.jpeg" alt="" aria-label="">
+            <img src="pictures/ancient-retro.jpeg" alt="" aria-label="">
             <h3>Ancient Retro 3</h3>
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Lorem ipsum dolor sit amet.</p>
