produktsida ska vi merga med Phi Thais branch, pray to god!

--- a/computers.html
+++ b/computers.html
@@ -32,7 +32,7 @@
         </ul>
     </aside>
     
-    <main class="best-sellers">
+    <section class="computer-article">
         <!-- Ändrade från section -->
         <article>
             <!-- behöver vi inte ha "figure" på varje img? -->
@@ -89,7 +89,7 @@
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
-    </main>
+    </section>
     
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom">
