fixade bild storlek i rad 78

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         </article>
 
         <article>
-            <img src="pictures/Macintosh_Performa_6400.jpg" alt="" aria-label="">
-            <h3>Computer2</h3>
+            <img src="pictures/lenovo-laptop.jpg" alt="" aria-label="">
+            <h3>Laptop</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
     </section>
