vi behöver fixa product sidan och navbar. mediaqueries pågående.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">Products</a>
             <a href="#">Contact</a> -->
              <ul>
-                <img src="pictures/zocom-logo.svg" href="index.html">
+                <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
                 <li class="active-link"><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -38,9 +38,9 @@
     </main>
 
     <aside>
-        <a href="computers.html">Computers</a>
-        <a href="mobile.html">Mobile</a>
-        <a href="tablets.html">Tablets</a>
+        <a href="product.html">Computers</a>
+        <a href="product.html">Mobile</a>
+        <a href="product.html">Tablets</a>
     </aside>
     
     <section class="best-sellers">
