navigation fixed, took out zocom logo from ul to nav instead.

--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,8 @@
 
     <header class="grid">
         <nav>
-            <!-- <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Contact</a> -->
+            <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
              <ul>
-                <img src="pictures/zocom-logo.svg" href="index.html">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li class="active-link"><a href="contact.html">Contact</a></li>
