--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
 </head>
 <body>
 
-    <header class="grid">
+    <header class="headergrid">
         <nav>
-            <!-- <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Contact</a> -->
+            <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
              <ul>
-                <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
                 <li class="active-link"><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="contact.html">Contact</a></li>
