--- a/product.html
+++ b/product.html
@@ -11,11 +11,9 @@
 <body>
     <header class="grid">
         <nav>
-            <!-- <a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Contact</a> -->
+            <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
              <ul>
-                <img src="pictures/zocom-logo.svg" href="index.html">
+
                 <li><a href="index.html">Home</a></li>
                 <li class="active-link"><a href="product.html">Product</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -32,7 +30,7 @@
         </ul>
     </aside>
     
-    <section class="best-sellers-article">
+    <section class="best-sellers">
         <!-- Ändrade från section -->
         <article class="best-sellers-article">
             <img src="pictures/Macintosh_Performa_6400.jpg" alt="" aria-label="">
