behöver fixa layouten precis efter 425px.

--- a/mobile.html
+++ b/mobile.html
@@ -14,8 +14,8 @@
             <!-- <a href="#">Home</a>
             <a href="#">Products</a>
             <a href="#">Contact</a> -->
+           <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
              <ul>
-                <img src="pictures/zocom-logo.svg" href="index.html">
                 <li class="active-link"><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
                 <li><a href="contact.html">Contact</a></li>
