--- a/product.html
+++ b/product.html
@@ -48,7 +48,7 @@
 
         <article class="best-sellers-article">
             <img src="pictures/Macintosh_Performa_6400.jpg" alt="" aria-label="">
-            <h3>Macintosh Performa</h3>
+            <h3>Macintosh Performa 6400</h3>
              <!--ändrar h3 för o matcha produkt-typen  -->
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
@@ -102,7 +102,7 @@
 
         <article class="best-sellers-article">
             <img src="pictures/yellowpad.jpeg" alt="" aria-label="">
-            <h3>Mobile3</h3>
+            <h3>Tablet 1</h3>
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
 
