fixade layout på products men inte på specifika products sidorna

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
         <a href="product.html">Tablets</a>
     </aside>
     
-    <section class="best-sellers">
+    <section class="best-sellers-home">
         <article>
-            <!-- behöver vi inte ha "figure" på varje img? -->
             <img src="pictures/samsung-galaxy15.jpeg" alt="" aria-label="">
             <h3>Mobile</h3>
             <p>Lorem ipsum dolor sit amet.</p>
