layout för 3 raders mobil/dator/tablet sidor är fixade så det är justify-content:start

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </main>
 
     <aside>
-        <a href="product.html">Computers</a>
-        <a href="product.html">Mobile</a>
-        <a href="product.html">Tablets</a>
+        <a href="computers.html">Computers</a>
+        <a href="mobile.html">Mobile</a>
+        <a href="tablets.html">Tablets</a>
     </aside>
     
     <section class="best-sellers-home">
