--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <header class="headergrid">
         <nav>
+            <!-- tog ut logotyp från ul till nav -->
             <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
              <ul>
                 <li class="active-link"><a href="index.html">Home</a></li>
@@ -19,6 +20,12 @@
             </ul>
         </nav>
     </header>
+<!-- flyttade aside över main istället för under, så det följer WCAG standard. -->
+    <aside>
+        <a href="computers.html">Computers</a>
+        <a href="mobile.html">Mobile</a>
+        <a href="tablets.html">Tablets</a>
+    </aside>
 
     <main class="main.index">
         <section class="grid">
@@ -34,11 +41,7 @@
         
     </main>
 
-    <aside>
-        <a href="computers.html">Computers</a>
-        <a href="mobile.html">Mobile</a>
-        <a href="tablets.html">Tablets</a>
-    </aside>
+
     
     <section class="best-sellers-home">
         <article>
