fixade kontakt sidan, zocom logot behöver justering, håller på lägga till ALT och ARIA labels

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="headergrid">
         <nav>
             <!-- tog ut logotyp från ul till nav -->
-            <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
+            <a href="index.html"><img id="logotyp" src="pictures/zocom-logo.svg" ></a>
              <ul>
                 <li class="active-link"><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
@@ -72,7 +72,6 @@
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom">
         <p> &#169; Copyright Malmö team 2</p> 
-        
     </footer>   
     
 </body>
