--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <header class="grid">
         <nav>
-            <img id="logotyp" src="pictures/zocom-logo.svg" href="index.html">
+            <a href="index.html"><img id="logotyp" src="pictures/zocom-logo.svg" ></a>
              <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
@@ -19,20 +19,53 @@
             </ul>
         </nav>
     </header>
-
-    <main class="main.index">
-        <section class="grid">
+        <section class="contact-grid">
+            <h1 class="contact-header">Vad du får när du köper ifrån oss!</h1>
             <article class="index-article">
                 <figure>
                     <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
                 </figure>
-                <h2 class="section.h2">Varför är våra produkter för er?</h2> 
+                <h2 class="section.h2">Snabb leverans!</h2> 
                 <!-- Tillade h2 rubrik -->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi fugit eos aperiam tempora nobis fugiat, repudiandae suscipit similique quasi perspiciatis accusantium minus facere velit.</p>
             </article>
+
+            <article class="index-article">
+                <figure>
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                </figure>
+                <h2 class="section.h2">Billiga tillägstjänster</h2> 
+                <!-- Tillade h2 rubrik -->
+            </article>
+
+            <article class="index-article">
+                <figure>
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                </figure>
+                <h2 class="section.h2">Massa gratis stickers!</h2> 
+                <!-- Tillade h2 rubrik -->
+            </article>
+
+            <article class="index-article-bottom">
+                <figure>
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                </figure>
+                <h2 class="section.h2">Customer support 24/7!</h2> 
+                <!-- Tillade h2 rubrik -->
+
+            </article>
+
+            <article class="index-article-bottom">
+                <figure>
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                </figure>
+                <h2 class="section.h2">Du stödjer ett lokalt företag!</h2> 
+                <!-- Tillade h2 rubrik -->
+
+            </article>
+
         </section>
 
-        <section class="grid">
+        <section class="contact-grid2">
             <article class="index-article">
                 <figure>
                     <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
@@ -42,12 +75,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi fugit eos aperiam tempora nobis fugiat, repudiandae suscipit similique quasi perspiciatis accusantium minus facere velit.</p>
             </article>
         </section>
-    </main>
 
-    
-
-
-    
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom">
         <p> &#169; Copyright Malmö team 2</p> 
