la till wcag standard, fin justerade och la till headings till olika sidor och shadows

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,11 @@
             </ul>
         </nav>
     </header>
+
+    <main">
+        <h1>CONTACT US</h1>
         <section class="contact-grid">
-            <h1 class="contact-header">Vad du får när du köper ifrån oss!</h1>
+            <h2 class="contact-header">Vad du får när du köper ifrån oss!</h2>
             <article class="index-article">
                 <figure>
                     <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
@@ -75,6 +78,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nisi fugit eos aperiam tempora nobis fugiat, repudiandae suscipit similique quasi perspiciatis accusantium minus facere velit.</p>
             </article>
         </section>
+    </main>
 
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom">
