--- a/product.html
+++ b/product.html
@@ -30,6 +30,9 @@
         </ul>
     </aside>
     
+
+    <main>
+        <h1>PRODUCTS</h1>
     <section class="best-sellers">
         <!-- Ändrade från section -->
         <article class="best-sellers-article">
@@ -185,6 +188,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </article>
     </section>
+    </main>
     <!-- Phones -->
     <footer>
         <img src="pictures/zocom-logo.svg" class="logo-bottom" alt="logotyp" aria-label="gå till startsidan">
