felsökte via WAVE och tillämpa lösningar som t.ex. heading skips och alt text

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <header class="grid">
         <nav>
-            <a href="index.html"><img id="logotyp" src="pictures/zocom-logo.svg" ></a>
+            <a href="index.html"><img id="logotyp" src="pictures/zocom-logo.svg" alt="hemlogo" ></a>
              <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Product</a></li>
@@ -26,7 +26,7 @@
             <h2 class="contact-header">Vad du får när du köper ifrån oss!</h2>
             <article class="index-article">
                 <figure>
-                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="main-img">
                 </figure>
                 <h2 class="section.h2">Snabb leverans!</h2> 
                 <!-- Tillade h2 rubrik -->
@@ -34,7 +34,7 @@
 
             <article class="index-article">
                 <figure>
-                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="main-img" >
                 </figure>
                 <h2 class="section.h2">Billiga tillägstjänster</h2> 
                 <!-- Tillade h2 rubrik -->
@@ -42,7 +42,7 @@
 
             <article class="index-article">
                 <figure>
-                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="main-img" >
                 </figure>
                 <h2 class="section.h2">Massa gratis stickers!</h2> 
                 <!-- Tillade h2 rubrik -->
@@ -50,7 +50,7 @@
 
             <article class="index-article-bottom">
                 <figure>
-                    <img id="hero-img" src="pictures/hero-image.jpg" alt="" aria-label="">
+                    <img id="hero-img" src="pictures/hero-image.jpg" alt="main-img">
                 </figure>
                 <h2 class="section.h2">Customer support 24/7!</h2> 
                 <!-- Tillade h2 rubrik -->
@@ -81,9 +81,8 @@
     </main>
 
     <footer>
-        <img src="pictures/zocom-logo.svg" class="logo-bottom">
+        <img src="pictures/zocom-logo.svg" class="logo-bottom" alt="zoclogo">
         <p> &#169; Copyright Malmö team 2</p> 
-        
     </footer>   
     
 </body>
