--- a/tablets.html
+++ b/tablets.html
@@ -38,73 +38,73 @@
         <section class="best-sellers">
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
              <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
 
             <article>
                 <img src="pictures/yellowpad.jpeg" alt="Yellowpad Tablet" aria-label="Yellowpad Tablet">
-                <h3>Tablet</h3>
+                <h2>Tablet</h2>
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
             <article>
@@ -112,7 +112,7 @@
     </main>     
     
     <footer>
-        <img src="pictures/zocom-logo.svg" class="logo-bottom">
+        <img src="pictures/zocom-logo.svg" alt="home-logo" class="logo-bottom">
         <p> &#169; Copyright Malmö team 2</p> 
         
     </footer>   
