fixade main i kontakt sidan

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main">
+    <main>
         <h1>CONTACT US</h1>
         <section class="contact-grid">
             <h2 class="contact-header">Vad du får när du köper ifrån oss!</h2>
